# miniCTranslator

./: .gitignore  CMakeLists.txt  LICENSE  code.minic  lexerConfig.json  main.cpp  output.txt
baseInput/: baseCanonicalTable.json  baseInputCode.minic
include/: sym.h
includes/: error.h  lexer.h
libs/miniCAtomsToIntel8080/: CMakeLists.txt
libs/miniCAtomsToIntel8080/include/miniCAtomsToIntel8080/: translator.h
libs/miniCAtomsToIntel8080/source/: translator.cpp
libs/miniCBuilderAST/: CMakeLists.txt
libs/miniCBuilderAST/include/miniCBuilderAST/: builder.h  node.h
libs/miniCBuilderAST/source/: builder.cpp  node.cpp
libs/miniCBuilderAST/tests/: CMakeLists.txt
libs/miniCLexer/: CMakeLists.txt
libs/miniCLexer/include/miniCLexer/: lexer.h
libs/miniCLexer/source/: lexer.cpp
libs/miniCLexer/tests/: CMakeLists.txt  test_codeblocks.cpp  test_lex.cpp  test_lexeme.cpp
libs/miniCSemanticAnalyzer/: CMakeLists.txt
libs/miniCSemanticAnalyzer/include/miniCSemanticAnalyzer/: analyzer.h  atom.h  exception.h  symtable.h
libs/miniCSemanticAnalyzer/source/: analyzer.cpp  atom.cpp  symtable.cpp
libs/miniCSemanticAnalyzer/tests/: CMakeLists.txt
miniCError/: CMakeLists.txt  miniCError.cpp
miniCLexicalAnalyzer/: CMakeLists.txt  miniCLexicalAnalyzer.cpp  miniCLexicalAnalyzer.h
miniCToken/: CMakeLists.txt  miniCToken.h
output/: outputAtoms.atom  outputTable.table  outputTree.tree
source/: lexer.cpp
sources/: sym.cpp
utils/prepareGrammar/: canonicalItems.json  canonicalTable.json  example.json  go.mod  grammarIn.json  grammarIn2.json  prepareGrammar.go  testClosure.json  testEpsilon.json  testFirst.json  testFirst2.json
